--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @import "app/home/home.component";
 @import "app/network-config/details/details.component";
 @import "app/loading/loading.component";
+@import "app/network-config/details/share/share.component";
 
 @include mat-core();
 
