--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
           <div fxLayout="row wrap" fxLayoutGap="0% grid">
             <mat-form-field fxFlex="100">
               <mat-label>Email</mat-label>
-              <input type="email" formControlName="email" matInput required>
+              <input autofocus type="email" formControlName="email" matInput required>
             </mat-form-field>
             <mat-form-field fxFlex="100">
               <mat-label>Password</mat-label>
