--- a/src/app/wizard/consortiums/consortiums.component.html
+++ b/src/app/wizard/consortiums/consortiums.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" style="margin-top: 50px">
   <mat-card fxFlexOrder="2" fxFlex.lt-sm="100" fxFlex.gt-md="60" fxFlex="80">
     <div fxLayout="row">
-      <h2 fxFlex>Consortium</h2>
+      <h2 fxFlex>Consortiums</h2>
       <div fxFlex fxFlexAlign="center" *ngIf="this.form.errors?.error">
         <mat-error style="text-align: end">*Existing consortium name!</mat-error>
         <br>
