--- a/src/app/wizard/organizations/organizations.component.html
+++ b/src/app/wizard/organizations/organizations.component.html
@@ -1,14 +1,24 @@
-<form [formGroup]="this.form">
-  <mat-vertical-stepper linear>
-    <mat-step [stepControl]="organizationComponent.form" *ngFor="let org of orgs; let i = index">
-      <ng-template matStepLabel>{{org.fullName}}</ng-template>
-      <app-organization
-        [i]="i"
-        [last]="this.orgs.length-1 === i"
-        [rootStepper]="this.rootStepper"
-        [parentForm]="this.form" #organizationComponent
-        [isLocalhost]="this.isLocalhost"
-        [org]="org"></app-organization>
-    </mat-step>
-  </mat-vertical-stepper>
-</form>
+<mat-card>
+  <div>
+    <div fxLayout="row">
+      <div fxFlex>
+        <h2>Organizations</h2>
+      </div>
+      <mat-error *ngIf="form.errors?.orderer">You must declare at least an orderer in your network!</mat-error>
+    </div>
+    <form [formGroup]="this.form">
+      <mat-vertical-stepper linear>
+        <mat-step [stepControl]="organizationComponent.form" *ngFor="let org of orgs; let i = index">
+          <ng-template matStepLabel>{{org.fullName}}</ng-template>
+          <app-organization
+            [i]="i"
+            [last]="this.orgs.length-1 === i"
+            [rootStepper]="this.rootStepper"
+            [parentForm]="this.form" #organizationComponent
+            [isLocalhost]="this.isLocalhost"
+            [org]="org"></app-organization>
+        </mat-step>
+      </mat-vertical-stepper>
+    </form>
+  </div>
+</mat-card>
