--- a/src/app/network-config/details/details.component.html
+++ b/src/app/network-config/details/details.component.html
@@ -1,6 +1,6 @@
 <app-loading [loading]="loading"></app-loading>
 <app-toolbar>
-  <div *ngIf="config" fxLayout="row" style="margin-top: 50px">
+  <div *ngIf="config" fxLayout="row" style="margin: 50px 0">
     <div fxFlexOrder="2" fxFlex.lt-sm="100" fxFlex="70" fxFlex.lg="60">
       <mat-card>
         <div fxLayout="row wrap" fxLayoutGap="2% grid">
