--- a/src/app/network-config/details/share/shared-with-me/shared-with-me.component.html
+++ b/src/app/network-config/details/share/shared-with-me/shared-with-me.component.html
@@ -1,6 +1,6 @@
 <app-loading [loading]="loading"></app-loading>
 <app-toolbar>
-  <div fxLayout="row" style="margin-top: 80px">
+  <div fxLayout="row" style="margin: 80px 0">
     <div fxFlexOrder="2" fxFlex.lt-sm="100" fxFlex.gt-md="60" fxFlex="80">
       <mat-card *ngIf="shared">
         <div fxLayout="column" fxLayoutGap="2%">
