--- a/src/app/wizard/channels/channels.component.html
+++ b/src/app/wizard/channels/channels.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" style="margin-top: 50px">
+<div fxLayout="row" style="margin: 50px 0">
   <mat-card fxFlexOrder="2" fxFlex.lt-sm="100" fxFlex.gt-md="60" fxFlex="80">
     <div fxLayout="row">
       <h2 fxFlex>Channels</h2>
