--- a/src/app/wizard/wizard.component.html
+++ b/src/app/wizard/wizard.component.html
@@ -1,5 +1,8 @@
 <app-loading [loading]="loading"></app-loading>
-<app-toolbar (threeDotsSelected)="handleMenu($event)" [threeDots]="menus">
+<app-toolbar
+  appDroppable
+  (fileDropped)="fileToImportSelected($event[0])"
+  (threeDotsSelected)="handleMenu($event)" [threeDots]="menus">
   <app-stepper [@.disabled]="true" linear #stepper>
     <cdk-step label="Network" [stepControl]="networkComponent.form">
       <app-network #networkComponent [network]="this.network"></app-network>
@@ -21,6 +24,8 @@
       <app-summary (loading)="loading=$event" *ngIf="stepper.selectedIndex==4" [network]="this.network"></app-summary>
     </cdk-step>
   </app-stepper>
-  <input style="display: none" accept="application/json" (change)="fileToImportSelected($event.target.files[0])"
+  <input style="display: none"
+         (change)="fileToImportSelected($event.target.files[0])"
+         accept="application/json"
          #importFile type="file"/>
 </app-toolbar>
