--- a/src/app/wizard/summary/summary.component.html
+++ b/src/app/wizard/summary/summary.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row" style="margin-top: 50px">
+<div fxLayout="row" style="margin: 50px 0">
   <mat-card fxFlexOrder="2" fxFlex.lt-sm="100" fxFlex.gt-md="60" fxFlex="80">
     <h2>Summary</h2>
     <div fxLayout="column" fxLayoutGap="5%">
