--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <app-loading [loading]="loading"></app-loading>
 <app-toolbar>
-  <div *ngIf="!loading" fxFlex fxLayout="row" style="margin-top: 100px">
+  <div *ngIf="!loading" fxFlex fxLayout="row" style="margin: 100px 0">
     <div fxFlexOrder="2" fxFlex.lt-sm="100" fxFlex="70" fxFlex.lg="60">
       <mat-card *ngIf="list">
         <div fxLayout="column" fxLayoutGap="2%">
