--- a/src/app/network-config/details/details.component.html
+++ b/src/app/network-config/details/details.component.html
@@ -107,7 +107,7 @@
                 </div>
               </div>
             </mat-tab>
-            <mat-tab fxFlex label="Consortium">
+            <mat-tab fxFlex label="Consortiums">
               <div fxLayout="column" fxLayoutGap="4%">
                 <div></div>
                 <div class="paper" fxLayout="column" fxLayoutGap="4%"
