--- a/src/app/network-config/details/share/sharing-dialog/sharing-dialog.component.html
+++ b/src/app/network-config/details/share/sharing-dialog/sharing-dialog.component.html
@@ -15,7 +15,7 @@
         <input cdkFocusInitial required formControlName="email" type="email" matInput>
       </mat-form-field>
       <div fxFlex>
-        <button type="submit" style="width: 100%" mat-flat-button color="primary">Invite</button>
+        <button type="submit" style="width: 100%" mat-flat-button color="primary">Share</button>
       </div>
     </div>
   </form>
