--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,1 +1,34 @@
-
+<app-loading [loading]="loading"></app-loading>
+<app-toolbar>
+  <div *ngIf="!loading" fxFlex fxLayout="row" style="margin: 100px 0">
+    <div fxFlexOrder="2" fxFlex.lt-sm="100" fxFlex="70" fxFlex.lg="60">
+      <mat-card *ngIf="user">
+        <div fxLayout="column" fxLayoutGap="1%">
+          <div fxLayout.lt-md="column" fxLayout="row" fxFlex>
+            <h2>Profile</h2>
+          </div>
+          <div fxFlex>
+            <mat-list>
+              <div mat-subheader>Name</div>
+              <mat-list-item>{{user.name}}</mat-list-item>
+              <mat-divider inset="true"></mat-divider>
+              <div mat-subheader>Surname</div>
+              <mat-list-item>{{user.surname}}</mat-list-item>
+              <mat-divider inset="true"></mat-divider>
+              <div mat-subheader>Email</div>
+              <mat-list-item>{{user.email}}</mat-list-item>
+              <mat-divider inset="true"></mat-divider>
+              <div mat-subheader>Password</div>
+              <mat-list-item>*****</mat-list-item>
+            </mat-list>
+          </div>
+        </div>
+        <div>
+          <button (click)="closeAccount()" style="width: 100%" mat-stroked-button color="warn">Close account</button>
+        </div>
+      </mat-card>
+    </div>
+    <div fxFlex fxFlexOrder="1"></div>
+    <div fxFlex fxFlexOrder="3"></div>
+  </div>
+</app-toolbar>
